[gd_scene load_steps=9 format=3 uid="uid://b1b6decfyl2l0"]

[ext_resource type="Texture2D" uid="uid://cm8fpfnli5ink" path="res://assets/Hands/1R.png" id="1_1ijyi"]
[ext_resource type="Script" path="res://scripts/start_round.gd" id="1_tf4pp"]
[ext_resource type="Texture2D" uid="uid://c83hs7wj2legg" path="res://assets/Hands/1P.png" id="2_eqpv1"]
[ext_resource type="Texture2D" uid="uid://bi6sqeh32ajk6" path="res://assets/Hands/1S.png" id="3_7qbhe"]
[ext_resource type="Texture2D" uid="uid://bgpnyfm2hplyh" path="res://assets/Hands/2R.png" id="4_ti1xv"]
[ext_resource type="Texture2D" uid="uid://dh1vs84xt3tw1" path="res://assets/Hands/2P.png" id="5_46dmt"]
[ext_resource type="Texture2D" uid="uid://bi1o0rimoaby4" path="res://assets/Hands/2S.png" id="6_c0tlp"]

[sub_resource type="Theme" id="Theme_jyjnr"]

[node name="Start_Round" type="CanvasLayer"]
script = ExtResource("1_tf4pp")

[node name="Player1_Selection" type="Node" parent="."]

[node name="Player1_Rock" type="TextureRect" parent="Player1_Selection"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -710.0
offset_top = -350.0
offset_right = -10.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_1ijyi")

[node name="Player1_Rock_Label" type="RichTextLabel" parent="Player1_Selection"]
modulate = Color(0.258824, 0.635294, 0.737255, 1)
offset_left = 198.0
offset_top = 259.0
offset_right = 238.0
offset_bottom = 299.0
scale = Vector2(5, 5)
theme = SubResource("Theme_jyjnr")
text = "Q"

[node name="Player1_Paper" type="TextureRect" parent="Player1_Selection"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -710.0
offset_top = -40.0
offset_right = -10.0
offset_bottom = 660.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_eqpv1")

[node name="Player1_Paper_Label" type="RichTextLabel" parent="Player1_Selection"]
modulate = Color(0.258824, 0.635294, 0.737255, 1)
offset_left = 223.0
offset_top = 608.0
offset_right = 263.0
offset_bottom = 648.0
scale = Vector2(5, 5)
theme = SubResource("Theme_jyjnr")
text = "A"

[node name="Player1_Scissors" type="TextureRect" parent="Player1_Selection"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -410.0
offset_top = -40.0
offset_right = 290.0
offset_bottom = 660.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_7qbhe")

[node name="Player1_Scissors_Label" type="RichTextLabel" parent="Player1_Selection"]
modulate = Color(0.258824, 0.635294, 0.737255, 1)
offset_left = 736.0
offset_top = 592.0
offset_right = 776.0
offset_bottom = 632.0
scale = Vector2(5, 5)
theme = SubResource("Theme_jyjnr")
text = "S"

[node name="Player2_Selection" type="Node" parent="."]

[node name="Player2_Rock" type="TextureRect" parent="Player2_Selection"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 490.0
offset_top = -350.0
offset_right = 1190.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_ti1xv")

[node name="Player2_Rock_Label" type="RichTextLabel" parent="Player2_Selection"]
modulate = Color(0.807843, 0.431373, 0.329412, 1)
offset_left = 1648.0
offset_top = 261.0
offset_right = 1688.0
offset_bottom = 301.0
scale = Vector2(5, 5)
theme = SubResource("Theme_jyjnr")
text = "P"

[node name="Player2_Paper" type="TextureRect" parent="Player2_Selection"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 490.0
offset_top = -40.0
offset_right = 1190.0
offset_bottom = 660.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_46dmt")

[node name="Player2_Paper_Label" type="RichTextLabel" parent="Player2_Selection"]
modulate = Color(0.807843, 0.431373, 0.329412, 1)
offset_left = 1630.0
offset_top = 601.0
offset_right = 1670.0
offset_bottom = 641.0
scale = Vector2(5, 5)
theme = SubResource("Theme_jyjnr")
text = "L"

[node name="Player2_Scissors" type="TextureRect" parent="Player2_Selection"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 190.0
offset_top = -40.0
offset_right = 890.0
offset_bottom = 660.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_c0tlp")

[node name="Player2_Scissors_Label" type="RichTextLabel" parent="Player2_Selection"]
modulate = Color(0.807843, 0.431373, 0.329412, 1)
offset_left = 1134.0
offset_top = 589.0
offset_right = 1174.0
offset_bottom = 629.0
scale = Vector2(5, 5)
theme = SubResource("Theme_jyjnr")
text = "K"

[node name="Timer" type="Timer" parent="."]

[node name="Timerlabel" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -538.0
offset_right = -45.0
offset_bottom = -514.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(20, 20)
text = "3"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
